// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with description 1`] = `
<div
  className="rs-panel-group"
>
  <div
    className="rs-panel rs-panel-bordered"
  >
    <div
      aria-controls={null}
      className="rs-panel-header"
      tabIndex={-1}
    >
      <h3
        className="rs-panel-title"
      >
        <a
          href="/forums/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          First forum
        </a>
      </h3>
    </div>
    <div
      className="rs-panel-body"
      role="region"
    >
      <main
        className="rs-content"
      >
        <p>
          Forum description.
        </p>
      </main>
    </div>
  </div>
</div>
`;

exports[`Renders with multiple forums 1`] = `
<div
  className="rs-panel-group"
>
  <div
    className="rs-panel rs-panel-bordered"
  >
    <div
      aria-controls={null}
      className="rs-panel-header"
      tabIndex={-1}
    >
      <h3
        className="rs-panel-title"
      >
        <a
          href="/forums/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          First forum
        </a>
      </h3>
    </div>
    <div
      className="rs-panel-body"
      role="region"
    />
  </div>
  <div
    className="rs-panel rs-panel-bordered"
  >
    <div
      aria-controls={null}
      className="rs-panel-header"
      tabIndex={-1}
    >
      <h3
        className="rs-panel-title"
      >
        <a
          href="/forums/2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Second forum
        </a>
      </h3>
    </div>
    <div
      className="rs-panel-body"
      role="region"
    />
  </div>
</div>
`;

exports[`Renders with no forums 1`] = `
<div
  className="rs-panel-group"
/>
`;
